Fix the admin edit button on mobile

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -164,6 +164,7 @@ a
       content: "### "
 
 .sidebar
+  position: relative
   text-align: justify
 
   color: #ffa1a1
@@ -179,7 +180,7 @@ a
       text-align: center
 
   .admin-link
-    position: fixed
+    position: absolute
     bottom: 1em
     right: 2em
     text-decoration: underline
@@ -225,9 +226,6 @@ a
       right: 1rem
       left: 1rem
       bottom: 1rem
-
-    .admin-link
-      position: absolute
 
 .direction
   border-bottom: 1px dotted lighten(#ffa1a1, 7)
